Count levels, add separate index page

--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,13 @@ body {
   background: #eee;
   text-align: center;
 }
+
+.form-label {
+  display: inline-block;
+  width: 200px;
+  text-align: right;
+}
+
 .container {
   display: inline-block;
   position: absolute;
