--- a/templates/go.html
+++ b/templates/go.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous">
   </script>
   <script src="./Uri.js"></script>
-  <script src="./main.js" defer></script>
+  <script src="./go.js" defer></script>
 </head>
 <body>
 
