--- a/templates/go.html
+++ b/templates/go.html
@@ -9,7 +9,16 @@
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous">
   </script>
-  <script src="./Uri.js"></script>
+
+  <!-- Parse params. -->
+  <script>
+    let groupNum = parseInt('{{ group_num }}');
+    let numGroups = parseInt('{{ num_groups }}');
+    let maxNum = parseInt('{{ max_num }}');
+    let user = '{{ user }}';
+    let ignore_levels = '{{ ignore_levels }}' === 'True';
+  </script>
+
   <script src="./go.js" defer></script>
 </head>
 <body>
