--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,23 @@
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous">
   </script>
-  <script src="./index.js"></script>
 </head>
 <body>
   <div class="container">
-    <form action="javascript:void(0);">
+    <form action="/go" method="post">
       <label class="form-label" for="num_groups">Number of groups:</label>
-      <input type="text" class="input" id="num_groups">
+      <input type="text" class="input" name="num_groups" id="num_groups">
       <br>
       <label class="form-label" for="group">Group:</label>
-      <input type="text" class="input" id="group">
+      <input type="text" class="input" name="group" id="group">
       <br>
       <label class="form-label" for="max_num">Max number:</label>
-      <input type="text" class="input" id="max_num">
+      <input type="text" class="input" name="max_num" id="max_num">
       <br>
       <label class="form-label" for="user">User name:</label>
-      <input type="text" class="input" id="user">
+      <input type="text" class="input" name="user" id="user">
       <br>
-      <button type="submit" class="js-submit">Go</button>
+      <input type="submit" value="Go">
     </form>
   </div>
 </body>
