Implement option to ignore levels

--- a/templates/go.html
+++ b/templates/go.html
@@ -16,7 +16,7 @@
     let numGroups = parseInt('{{ num_groups }}');
     let maxNum = parseInt('{{ max_num }}');
     let user = '{{ user }}';
-    let ignore_levels = '{{ ignore_levels }}' === 'True';
+    let ignoreLevels = '{{ ignore_levels }}' === 'True';
   </script>
 
   <script src="./go.js" defer></script>
