--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
       <label class="form-label" for="user">User name:</label>
       <input type="text" class="input" name="user" id="user">
       <br>
+      <label for="ignore_levels">Ignore levels:</label>
+      <input type="checkbox" name="ignore_levels" id="ignore_levels">
+      <br>
       <input type="submit" value="Go">
     </form>
   </div>
