--- a/static/style.css
+++ b/static/style.css
@@ -6,18 +6,24 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   color: #444;
   background: #eee;
+}
+
+.toolbar {
+  background: darkgrey;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  font-size: 12px;
+  font-weight: bold;
+  height: 26px;
+  line-height: 25px;
   text-align: center;
 }
-
-.form-label {
-  display: inline-block;
-  width: 200px;
-  text-align: right;
-}
-
 .container {
   display: inline-block;
   position: absolute;
+  left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   text-align: center;
@@ -26,6 +32,13 @@ body {
 .label {
   font-size: 24px;
   font-weight: bold;
+}
+.form-label {
+  display: inline-block;
+  width: 130px;
+  text-align: right;
+  font-weight: bold;
+  font-size: 12px;
 }
 .js-is-active {
   font-size: 42px;
@@ -37,10 +50,32 @@ body {
   border: 1px solid lightgrey;
   padding: 5px 15px;
   transition: 300ms ease border-color;
+  margin-top: 5px;
 }
-.input:focus {
+.input[type="checkbox"] {
+  height: initial;
+  margin-left: 0;
+}
+.input[type="text"]:focus,
+.input[type="submit"]:focus {
   outline: none;
   border-color: grey;
+}
+.input[type="submit"] {
+  height: 32px;
+  border: 1px solid lightgrey;
+  background: white;
+  border-radius: 6px;
+  padding: 0 30px;
+  font-size: inherit;
+  cursor: pointer;
+  transition: 300ms ease background-color;
+}
+.input[type="submit"]:hover {
+  background-color: #EEE;
+}
+.small-text-input {
+  width: 40px;
 }
 .overlay {
   position: fixed;
@@ -49,4 +84,46 @@ body {
   right: 0;
   bottom: 0;
   pointer-events: none;
+}
+
+.widgets-container {
+  display: flex;
+  margin: 26px 10px 0 10px;
+}
+.widgets-left {
+  flex-grow: 2;
+}
+.widgets-right {
+  flex-grow: 1;
+  margin-left: 20px;
+}
+.widget {
+  margin-top: 20px;
+  border: 1px solid #AAA;
+  border-radius: 3px;
+}
+.widget-header {
+  font-weight: bold;
+  padding: 12px 12px;
+  border-bottom: 1px solid lightgrey;
+}
+.widget-body {
+  padding: 12px 12px;
+}
+.widget-body-button {
+  width: 100%;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  transition: 300ms ease background-color;
+}
+.widget-body-button:hover {
+  background-color: #DDD;
+}
+.widget table {
+  width: 100%;
+}
+
+.u-text-align-right {
+  text-align: right;
 }
