--- a/templates/landing.html
+++ b/templates/landing.html
@@ -11,6 +11,11 @@
   </script>
 </head>
 <body>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <div class="flask-flash">{{ messages[0] }}</div>
+    {% endif %}
+  {% endwith %}
   <div class="toolbar">
     User: {{ user }}
     <a href="/">Log out</a>
