--- a/templates/go.html
+++ b/templates/go.html
@@ -30,6 +30,11 @@
     <a href="/">Log out</a>
   </div>
 
+  <div class="params">
+    <strong>Game mode:</strong>
+    max_num: {{ max_num }}, group: {{ group }}/{{ num_groups }}
+  </div>
+
   <div class="container">
     <p><label for="input" class="js-label label">Loading…</label></p>
     <p><input type="text" id="input" class="js-input input"></p>
